[package]
name = "veloce"
version = "0.1.1"
authors = ["d-dorazio <d.dorazio96@gmail.com>"]

[dependencies]
clap = "2.30"
failure = "0.1"
hyper = "0.11" # hyper is required only for the header! macro
prettytable-rs = "0.6"
reqwest = "0.8"
rustyline = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"

clippy = { version = "*", optional = true }

[build-dependencies]
clap = "2.30"
structopt = "0.2"
